# QuantumFlow_AI_Lab

./: .gitignore  README.md  ai_strategy_lab.md  api_demo.py  download_nltk_data.py  project_structure.txt  pyproject.toml  requirements.txt  run_demo.py  setup.py
app/: main.py
app/agents/: autogen_agents.py  base_agent.py  data_analyst_agent.py  execution_agent.py  strategy_optimizer.py  websocket_agent.py
app/api/: routes.py  websocket_routes.py
app/core/: config.py  marketstack_client.py  okx_client.py
app/models/: strategy.py
app/services/: execution_service.py  llm_service.py  rag_service.py  rl_service.py  sentiment_analysis_service.py  swap_service.py  transaction_simulation_service.py  websocket_service.py
data/vector_db/: index.faiss
docs/: CHANGES_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_COMPONENTS.md  FRONTEND_ERROR_FIXES.md  FRONTEND_FIXES.md  FRONTEND_WIREFRAME.md  marketstackdoc.md  quantumflow.md
examples/: mock_dashboard.html  okx_dashboard.html  trading_dashboard.html  trading_dashboard_alt_port.html  trading_dashboard_example.py  trading_dashboard_mock.py  trading_dashboard_okx.py  trading_strategy_websocket_example.py  websocket_client.html
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
tests/: test_execution_service.py  test_rag_service.py  test_rl_service.py  test_sentiment_analysis.py
