[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_strategy_lab"
version = "0.1.0"
description = "AI Strategy Lab for crypto trading with WebSocket-based real-time data streaming"
readme = "README.md"
authors = [
    {name = "The Bulls Team", email = "team@thebulls.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "starlette>=0.46.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "websockets>=15.0.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "gymnasium>=1.0.0",
    "python-telegram-bot==22.1"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
llm = [
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.18",
    "faiss-cpu>=1.7.4",
    "openai>=1.3.5",
]
agents = [
    "pyautogen>=0.2.3",
]

[project.scripts]
ai-strategy-lab = "app.main:run_app"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
